[gd_scene load_steps=10 format=3 uid="uid://dcf3u2uprdby7"]

[ext_resource type="Script" uid="uid://bgntdux6vhg5m" path="res://scripts/dragging/cup.gd" id="1_iw5ct"]
[ext_resource type="Texture2D" uid="uid://bvghplyuqsflx" path="res://art/sprites/CupFront.png" id="2_ssn6n"]
[ext_resource type="Texture2D" uid="uid://f2ovel57eceu" path="res://art/sprites/CupBack.png" id="3_kkhl5"]
[ext_resource type="Texture2D" uid="uid://0df7dp0fyq10" path="res://art/sprites/cup_matcha_liquid.png" id="3_kru4q"]
[ext_resource type="AudioStream" uid="uid://bnor8q76i6d8y" path="res://art/audio/01. duisterwho__take-plastic-cup-sound.wav" id="4_kkhl5"]
[ext_resource type="Texture2D" uid="uid://c8jycnx76xsap" path="res://art/sprites/cup_fruits_topping.png" id="4_v8m4r"]
[ext_resource type="Texture2D" uid="uid://6f8xxl0j7m22" path="res://art/sprites/cup_star_boba.png" id="5_kjo86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y5yv"]
size = Vector2(90, 121)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bm1jm"]
size = Vector2(88, 118)

[node name="Cup_Obj" type="CharacterBody2D" groups=["Cup"]]
collision_mask = 2
script = ExtResource("1_iw5ct")

[node name="cupBack" type="Sprite2D" parent="."]
texture = ExtResource("3_kkhl5")

[node name="cupTea" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("3_kru4q")

[node name="cupTopping" type="Sprite2D" parent="."]
position = Vector2(0, -22)
texture = ExtResource("4_v8m4r")

[node name="cupBoba" type="Sprite2D" parent="."]
position = Vector2(0, 21)
texture = ExtResource("5_kjo86")

[node name="Cup" type="Sprite2D" parent="."]
visibility_layer = 4
texture = ExtResource("2_ssn6n")

[node name="click detection" type="Button" parent="Cup"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -27.0
offset_top = -44.0
offset_right = 27.0
offset_bottom = 44.0

[node name="Area2D" type="Area2D" parent="." groups=["Cup"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_0y5yv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_bm1jm")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kkhl5")

[connection signal="button_down" from="Cup/click detection" to="." method="_on_click_detection_button_down"]
[connection signal="button_up" from="Cup/click detection" to="." method="_on_click_detection_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
